--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,5 +44,5 @@ jobs:
           git config --global user.email "tvanhens@gmail.com"
           git config --global user.name "Tyler van Hensbergen"
           lein release
-          git commit --amend -m"$(shell git log -1 --pretty=%B) [skip ci]"
+          git commit --amend -m"$(git log -1 --pretty=%B) [skip ci]"
           git push origin master
