add git docs for commit

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,7 @@ jobs:
       - run: lein test
       - run: |
           lein codox
+          git add docs
           git config --global user.email "tvanhens@gmail.com"
           git config --global user.name "Tyler van Hensbergen"
           lein release
